--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
-version : "3.3"
+version : '3'
 services :
-  web :
-    build : .
-    ports :
-      - "8000 : 8000"
+ web :
+  build : .
+  ports :
+   - "8000 : 8000"
